[gd_scene load_steps=7 format=3 uid="uid://c2f3x3p0y1m2m"]

[ext_resource type="Script" path="res://scripts/ui/combat_test.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bcl2j6g6n47f5" path="res://scenes/player/Player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c7v4ddk1y40a1" path="res://scenes/enemies/Slasher.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://d4wq2s3y0m2hc" path="res://scenes/hud/HUDCommitWidget.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://clt7p3m18r5so" path="res://scenes/ui/VirtualJoystick.tscn" id="5"]

[node name="Combat_Test" type="Node2D"]
script = ExtResource("1")

[node name="Floor" type="ColorRect" parent="."]
color = Color(0.08, 0.08, 0.09, 1)
size = Vector2(1080, 1920)

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(280, 1060)

[node name="Slasher" parent="." instance=ExtResource("3")]
position = Vector2(760, 900)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUDCommitWidget" parent="UILayer" instance=ExtResource("4")]

[node name="VirtualJoystick" parent="UILayer" instance=ExtResource("5")]

[node name="RetryOverlay" type="Control" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Dim" type="ColorRect" parent="UILayer/RetryOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="PanelContainer" parent="UILayer/RetryOverlay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -160.0
offset_right = 220.0
offset_bottom = 160.0

[node name="VBox" type="VBoxContainer" parent="UILayer/RetryOverlay/Panel"]
alignment = 1

[node name="Title" type="Label" parent="UILayer/RetryOverlay/Panel/VBox"]
text = "Retry"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UILayer/RetryOverlay/Panel/VBox"]
text = "Restart"

[node name="MenuButton" type="Button" parent="UILayer/RetryOverlay/Panel/VBox"]
text = "Main Menu"
